tests/ui/privacy/private-method.stderr
error[E0624]: method `nap` is private
  --> $DIR/private-method.rs:22:8
   |
LL |         fn nap(&self) {}
   |         ------------- private method defined here
...
LL |   nyan.nap();
   |        ^^^ private method

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0624`.
